Update: Lucian does it bettah